Fix Safari flickering issue

--- a/style/style.css
+++ b/style/style.css
@@ -291,6 +291,7 @@
 			.des-container {
 				width: 100%;
 				height: 100%;
+				position: relative;
 			}
 
 
